<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dff3fe"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".ObdConectionActivity">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/pareados"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#012967" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="0.50"
        android:background="#738bb1"
        android:gravity="center"
        android:text="@string/tv_pareado"
        android:visibility="gone" />

    <ListView
        android:id="@+id/PariedDevicesList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="0.50"
        android:background="#738bb1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/procurar"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#012967" />

        <ProgressBar
            android:id="@+id/loader"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:visibility="gone"
            android:indeterminate="true"
            style="?android:progressBarStyle" />


    </LinearLayout>


    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="0.50"
        android:background="#738bb1"
        android:gravity="center"
        android:text="@string/tv_pareado"
        android:visibility="gone" />

    <ListView
        android:id="@+id/UnpariedDevicesList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="0.50"
        android:background="#738bb1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:text=""/>

    <Button
        android:id="@+id/procurar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#012967"
        android:text="@string/procurar1"
        android:textColor="#ffffff" />

</LinearLayout>
