<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dff3fe"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"

        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:layout_above="@+id/testBT"
        android:layout_alignEnd="@+id/testBT"
        android:layout_alignLeft="@+id/testBT"
        android:layout_alignRight="@+id/testBT"
        android:layout_alignStart="@+id/testBT"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"

        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/RPM"

                android:layout_width="200dp"
                android:layout_height="200dp"

                android:background="@drawable/circle1"
                android:gravity="center"
                android:text="@string/inicio1"
                android:textColor="#FFFFFF"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="140dp"
                android:text="@string/RPM"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textSize="30sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp">

                    <TextView
                        android:id="@+id/Borboleta"

                        android:layout_width="110dp"
                        android:layout_height="110dp"

                        android:background="@drawable/circle2"

                        android:gravity="center"
                        android:text="@string/inicio2"
                        android:textColor="#012967"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/tv2"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/Borboleta"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="40dp"
                        android:gravity="center"
                        android:text="@string/Throttler"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#012967"
                        android:textSize="12sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp">

                    <TextView
                        android:id="@+id/Ignicao"

                        android:layout_width="110dp"
                        android:layout_height="110dp"

                        android:background="@drawable/circle2"

                        android:gravity="center"
                        android:text="@string/inicio2"
                        android:textColor="#012967"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/tv3"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/Ignicao"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="40dp"
                        android:gravity="center"
                        android:text="@string/IgnitionTiming"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#012967"
                        android:textSize="12sp" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp">

                    <TextView
                        android:id="@+id/Consumo"

                        android:layout_width="110dp"
                        android:layout_height="110dp"

                        android:background="@drawable/circle2"

                        android:gravity="center"
                        android:text="@string/inicio2"
                        android:textColor="#012967"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/tv4"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/Consumo"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="45dp"
                        android:gravity="center"
                        android:text="@string/FuelConsumptionRate"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#012967"
                        android:textSize="12sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp">

                    <TextView
                        android:id="@+id/MassAir"

                        android:layout_width="110dp"
                        android:layout_height="110dp"

                        android:background="@drawable/circle2"

                        android:gravity="center"
                        android:text="@string/inicio2"
                        android:textColor="#012967"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/tv5"
                        android:layout_width="80dp"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/MassAir"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="45dp"
                        android:text="@string/MassAirFlow"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#012967"
                        android:textSize="12sp" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/testBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#012967"
        android:text="@string/iniciar_teste"
        android:textColor="#ffffff" />

</RelativeLayout>